--- a/texmf/customdefs.sty
+++ b/texmf/customdefs.sty
@@ -6,8 +6,11 @@
 
 \ProvidesPackage{customdefs}
 
-\RequirePackage{mathtools}
-\RequirePackage{empheq}
+\RequirePackage{amsmath}
+	\RequirePackage{amssymb}
+	\RequirePackage{mathtools}
+	\RequirePackage{nccmath}
+	\RequirePackage{empheq}
 
 % To install non-standard TikZ libraries:
 % mkdir -p ~/texmf/tex/generic/pgf
@@ -18,6 +21,7 @@
 	\usetikzlibrary{shapes}
 	\usetikzlibrary{calc}
 	\usetikzlibrary{intersections}
+	\usetikzlibrary{positioning}
 
 \RequirePackage{pgfplots}
 	\pgfplotsset{compat=newest}
@@ -411,9 +415,142 @@
 
 % Define default style for this node
 \tikzset{flip flop/port labels/.style={font=\sffamily\small}}
-\tikzset{every dff node/.style={draw,minimum width=1.5cm,minimum 
-height=2cm,thick,inner sep=1mm,outer sep=0pt,cap=round,add 
-font=\sffamily\normalsize}}
+\tikzset{every dff node/.style={
+	draw,
+	minimum width=1.5cm,
+	minimum height=2cm,
+	thick,
+	inner sep=1mm,
+	outer sep=0pt,
+	cap=round,
+	add font=\sffamily\small}}
+
+\makeatother
+
+
+% ------------------------------
+% Integrated Clock Gating (ICG)
+% node shape
+% Author: Alessandro De Laurenzis
+%         (adapted from flip-flop
+%					node by Martin Scharrer)
+% ------------------------------
+\makeatletter
+
+\pgfdeclareshape{icg}{
+  % The 'minimum width' and 'minimum height' keys, not the content, determine
+  % the size
+  \savedanchor\northeast{%
+    \pgfmathsetlength\pgf@x{\pgfshapeminwidth}%
+    \pgfmathsetlength\pgf@y{\pgfshapeminheight}%
+    \pgf@x=0.5\pgf@x
+    \pgf@y=0.5\pgf@y
+  }
+  % This is redundant, but makes some things easier:
+  \savedanchor\southwest{%
+    \pgfmathsetlength\pgf@x{\pgfshapeminwidth}%
+    \pgfmathsetlength\pgf@y{\pgfshapeminheight}%
+    \pgf@x=-0.5\pgf@x
+    \pgf@y=-0.5\pgf@y
+  }
+
+  % Inherit from rectangle
+  \inheritanchorborder[from=rectangle]
+
+  % Define same anchor a normal rectangle has
+  \anchor{center}{\pgfpointorigin}
+  \anchor{north}{\northeast \pgf@x=0pt}
+  \anchor{east}{\northeast \pgf@y=0pt}
+  \anchor{south}{\southwest \pgf@x=0pt}
+  \anchor{west}{\southwest \pgf@y=0pt}
+  \anchor{north east}{\northeast}
+  \anchor{north west}{\northeast \pgf@x=-\pgf@x}
+  \anchor{south west}{\southwest}
+  \anchor{south east}{\southwest \pgf@x=-\pgf@x}
+  \anchor{text}{
+    \pgfpointorigin
+    \advance\pgf@x by -.5\wd\pgfnodeparttextbox%
+    \advance\pgf@y by -.5\ht\pgfnodeparttextbox%
+    \advance\pgf@y by +.5\dp\pgfnodeparttextbox%
+  }
+
+  % Define anchors for signal ports
+  \anchor{EN}{
+    \pgf@process{\northeast}%
+    \pgf@x=-1\pgf@x%
+    \pgf@y=.5\pgf@y%
+  }
+  \anchor{pEN}{
+    \pgf@process{\northeast}%
+    \pgf@x=-2\pgf@x%
+    \pgf@y=.5\pgf@y%
+  }
+  \anchor{CP}{
+    \pgf@process{\northeast}%
+    \pgf@x=-1\pgf@x%
+    \pgf@y=-.5\pgf@y%
+  }
+  \anchor{pCP}{
+    \pgf@process{\northeast}%
+    \pgf@x=-2\pgf@x%
+    \pgf@y=-.5\pgf@y%
+  }
+  \anchor{G}{
+    \pgf@process{\northeast}%
+    \pgf@y=.5\pgf@y%
+  }
+  \anchor{pG}{
+    \pgf@process{\northeast}%
+    \pgf@x=2\pgf@x%
+    \pgf@y=.5\pgf@y%
+  }
+
+  % Draw the rectangle box and the port labels
+  \backgroundpath{
+    % Rectangle box
+    \pgfpathrectanglecorners{\southwest}{\northeast}
+    % Angle (>) for clock input
+    \pgf@anchor@icg@CP
+    \pgf@xa=\pgf@x \pgf@ya=\pgf@y
+    \pgf@xb=\pgf@x \pgf@yb=\pgf@y
+    \pgf@xc=\pgf@x \pgf@yc=\pgf@y
+    \pgfmathsetlength\pgf@x{1.6ex} % size depends on font size
+    \advance\pgf@ya by \pgf@x
+    \advance\pgf@xb by \pgf@x
+    \advance\pgf@yc by -\pgf@x
+    \pgfpathmoveto{\pgfpoint{\pgf@xa}{\pgf@ya}}
+    \pgfpathlineto{\pgfpoint{\pgf@xb}{\pgf@yb}}
+    \pgfpathlineto{\pgfpoint{\pgf@xc}{\pgf@yc}}
+    \pgfclosepath
+
+    % Draw port labels
+    \begingroup
+    \tikzset{clock gating/port labels} % Use font from this style
+    \tikz@textfont
+
+    \pgf@anchor@icg@EN
+    \pgftext[left,base,at={\pgfpoint{\pgf@x}{\pgf@y}},x=\pgfshapeinnerxsep]{\raisebox{-0.75ex}{EN}}
+
+    \pgf@anchor@icg@G
+    \pgftext[right,base,at={\pgfpoint{\pgf@x}{\pgf@y}},x=-\pgfshapeinnerxsep]{\raisebox{-.75ex}{G}}
+    \endgroup
+  }
+}
+
+% Key to add font macros to the current font
+\tikzset{add font/.code={\expandafter\def\expandafter\tikz@textfont\expandafter{\tikz@textfont#1}}} 
+
+% Define default style for this node
+\tikzset{clock gating/port labels/.style={font=\sffamily\footnotesize}}
+\tikzset{every icg node/.style={
+	draw,
+	minimum width=1.5cm,
+	minimum height=1cm,
+	thick,
+	inner sep=1mm,
+	outer sep=0pt,
+	cap=round,
+	add font=\sffamily\footnotesize}}
 
 \makeatother
 
