Removed backend=bibtex from biblatex package

--- a/texmf/customdefs.sty
+++ b/texmf/customdefs.sty
@@ -14,7 +14,7 @@
 
 \RequirePackage{appendixnumberbeamer}
 \RequirePackage{babel}
-\RequirePackage[backend=bibtex,style=alphabetic,sorting=none]{biblatex}
+\RequirePackage[style=alphabetic,sorting=none]{biblatex}
 \RequirePackage[font=tiny,skip=0pt]{caption}
 \RequirePackage{datetime}
 \RequirePackage[T1]{fontenc}
